--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-version-file",
+  "name": "version-file",
   "version": "0.1.3",
   "description": "Generates a file with your package name, version and build date",
   "main": "lib/index.js",
